k8s/nginx-ingress-controller/nginx-example/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "hello-world"
  labels:
    app: "hello-world"
    type: "front-end"
spec:
  containers:
  - name: nginx-container
    image: nginx
