k8s/nginx-ingress-controller/nginx-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: hello-world
  type: ClusterIP
  ports:
  - name: hello-world
    port: 5678
    targetPort: 80
    protocol: TCP
