k8s/nginx-ingress-controller/nginx-example/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
  - host: localdomain.test
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 5678
